fix error display on smaller screens, fix #8090

--- a/core/css/mobile.css
+++ b/core/css/mobile.css
@@ -103,4 +103,12 @@
 }
 
 
+/* fix error display on smaller screens */
+.error-wide {
+	width: 100%;
+	margin-left: 0 !important;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
 }
